--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="THE INCOME APP"
+        android:textColor="@color/colorDarkBlue"
         android:layout_gravity="center"
         android:layout_marginTop="100dp"
         android:textSize="40sp"
@@ -24,10 +25,11 @@
         android:textSize="30sp"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="40dp"
+        android:textColor="@color/colorWhite"
         android:text="Login" />
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="40sp"
+        android:layout_height="40dp"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="50dp"
@@ -40,22 +42,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="30sp"
+        android:textColor="@color/colorWhite"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="40dp"
         android:text="Password" />
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="50dp"
+        android:background="@drawable/login_edit_text"
         android:id="@+id/editPassword"
         />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="LOGIN"
-        android:textSize="40sp"
+        android:textSize="50sp"
+        android:paddingVertical="10dp"
+        android:paddingHorizontal="20dp"
+        android:textColor="@color/colorWhite"
+        android:background="@drawable/login_edit_text"
         android:layout_gravity="center"
         android:layout_marginTop="50dp"
         />
