--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -22,18 +22,12 @@
         android:id="@+id/txtLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="40dp"
-        android:textColor="@color/colorWhite"
+        style="@style/whiteTextView"
         android:text="Login" />
     <EditText
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="50dp"
-        android:background="@drawable/login_edit_text"
+        style="@style/roundedEditText"
         android:id="@+id/editLogin"
         />
 
@@ -41,31 +35,19 @@
         android:id="@+id/txtPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:textColor="@color/colorWhite"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="40dp"
+        style="@style/whiteTextView"
         android:text="Password" />
     <EditText
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="50dp"
-        android:background="@drawable/login_edit_text"
+        style="@style/roundedEditText"
         android:id="@+id/editPassword"
         />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="LOGIN"
-        android:textSize="50sp"
-        android:paddingVertical="10dp"
-        android:paddingHorizontal="20dp"
-        android:textColor="@color/colorWhite"
-        android:background="@drawable/login_edit_text"
-        android:layout_gravity="center"
-        android:layout_marginTop="50dp"
+        style="@style/whiteTransparentButton"
         />
 
 </LinearLayout>
