--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,40 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="controlBaseTile">
+        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:textSize">30sp</item>
+
+    </style>
+
+    <style name="roundedEditText" parent="controlBaseTile">
+        <item name="android:layout_marginHorizontal">50dp</item>
+        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:background">@drawable/login_edit_text</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
+
+    <style name="roundedTextView" parent="controlBaseTile">
+        <item name="android:layout_marginHorizontal">50dp</item>
+        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:background">@drawable/login_edit_text</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="whiteTextView" parent="controlBaseTile">
+        <item name="android:layout_marginStart">50dp</item>
+        <item name="android:layout_marginTop">40dp</item>
+
+    </style>
+
+    <style name="whiteTransparentButton" parent="controlBaseTile">
+        <item name="android:background">@drawable/login_edit_text</item>
+        <item name="android:paddingHorizontal">40dp</item>
+        <item name="android:paddingVertical">8dp</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:textSize">50sp</item>
+        <item name="android:layout_marginTop">50dp</item>
+    </style>
+
 </resources>
