--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,8 @@
     <style name="controlBaseTile">
         <item name="android:textColor">@color/colorWhite</item>
         <item name="android:textSize">30sp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
 
     </style>
 
@@ -19,6 +21,10 @@
         <item name="android:layout_marginTop">20dp</item>
         <item name="android:background">@drawable/login_edit_text</item>
         <item name="android:layout_gravity">center</item>
+        <item name="android:paddingVertical">5dp</item>
+        <item name="android:paddingHorizontal">15dp</item>
+        <item name="android:layout_width">match_parent</item>
+
     </style>
 
     <style name="roundedTextView" parent="controlBaseTile">
@@ -27,6 +33,9 @@
         <item name="android:background">@drawable/login_edit_text</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:gravity">center</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:padding">5dp</item>
+
     </style>
 
     <style name="whiteTextView" parent="controlBaseTile">
@@ -42,6 +51,16 @@
         <item name="android:layout_gravity">center</item>
         <item name="android:textSize">50sp</item>
         <item name="android:layout_marginTop">50dp</item>
+    </style>
+
+    <style name="titleTextView" parent="controlBaseTile">
+        <item name="android:textColor">@color/colorDarkBlue</item>
+        <item name="android:layout_marginTop">100dp</item>
+        <item name="android:textSize">40sp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_gravity">center</item>
+
+
     </style>
 
 </resources>
