Made main activity button style, added image background

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorDarkBlue">#66B4CC</color>
+    <color name="colorBrownForText">#5F4E34</color>
 </resources>
