Added links between activities on btn click

--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -35,7 +35,7 @@
     <Button
         android:text="LOGIN"
         style="@style/whiteTransparentButton"
-        android:id=""
+        android:id="@+id/btnLogin"
         />
 
 </LinearLayout>
