--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,8 @@
         android:gravity="center"
         android:layout_marginTop="120dp"
         android:layout_centerHorizontal="true"
-        android:text="WALLET">
+        android:id="@+id/btnAddTransaction"
+        android:text="ADD">
     </Button>
 
 </RelativeLayout>
