--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -58,6 +58,7 @@
         <item name="android:layout_height">150dp</item>
         <item name="android:layout_width">150dp</item>
         <item name="android:textColor">@color/colorBrownForText</item>
+        <item name="android:padding">10dp</item>
     </style>
 
     <style name="titleTextView" parent="controlBaseTile">
@@ -69,5 +70,14 @@
 
 
     </style>
+
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
