--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -57,6 +57,7 @@
         <item name="android:background">@drawable/semi_transparent_button</item>
         <item name="android:layout_height">150dp</item>
         <item name="android:layout_width">150dp</item>
+        <item name="android:textSize">25sp</item>
         <item name="android:textColor">@color/colorBrownForText</item>
         <item name="android:padding">10dp</item>
     </style>
