--- a/app/src/main/res/layout/activity_add_transaction.xml
+++ b/app/src/main/res/layout/activity_add_transaction.xml
@@ -5,13 +5,41 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/gradient_background"
+    android:id="@+id/layoutAddTransaction"
+    android:background="@drawable/gradient_background_blue"
     tools:context=".LoginActivity">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
+
+        <Button
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            style="@style/whiteTransparentButton"
+            android:layout_margin="20dp"
+            android:text="+"
+            android:id="@+id/btnPlus"
+            android:padding="0dp"
+            android:textSize="80sp"/>
+        <Button
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            style="@style/whiteTransparentButton"
+            android:layout_margin="20dp"
+            android:id="@+id/btnMinus"
+            android:text="-"
+            android:padding="0dp"
+            android:textSize="80sp"/>
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/txtAmount"
         style="@style/whiteTextView"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="20dp"
         android:text="Amount" />
     <EditText
         style="@style/roundedEditText"
@@ -34,6 +62,7 @@
     <TextView
         android:text="Pick a date"
         style="@style/roundedTextView"
+        android:layout_marginTop="15dp"
         android:id="@+id/txtDate"/>
     <Button
         android:text="ADD"
