Working on recyclerview, failed for now

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorDarkBlue">#66B4CC</color>
     <color name="colorBrownForText">#5F4E34</color>
+    <color name="colorDarkGreen">#164012</color>
 </resources>
