--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -72,6 +72,13 @@
 
     </style>
 
+    <style name="transparentTextView">
+        <item name="android:textColor">@color/colorDarkGreen</item>
+        <item name="android:textSize">40sp</item>
+        <item name="android:layout_margin">20dp</item>
+
+    </style>
+
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
