--- a/app/src/main/res/layout/income_recycler_row.xml
+++ b/app/src/main/res/layout/income_recycler_row.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="150dp"
-    android:background="@drawable/semi_transparent_button">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="10dp"
+    app:cardCornerRadius="5dp"
+    app:cardElevation="2dp">
 
 
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -14,6 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="AAAAAAAA"
+            android:id="@+id/txtRecyclerCategory"
             android:textSize="25sp"
             android:layout_margin="10dp"
             android:layout_marginLeft="20dp"/>
@@ -22,7 +31,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="AAAAA"
+            android:id="@+id/txtRecyclerDate"
             android:layout_gravity="right"
+            android:layout_alignParentRight="true"
             android:gravity="right"
             android:textSize="25sp"
             android:layout_margin="10dp"
@@ -30,9 +41,9 @@
 
 
 
-    </LinearLayout>
+    </RelativeLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -41,9 +52,10 @@
             android:layout_height="wrap_content"
             style="@style/transparentTextView"
             android:gravity="center"
+            android:id="@+id/txtRecyclerAmount"
             android:layout_gravity="left"
             android:textColor="@color/colorBrownForText"
-            android:text="AAAAAAAAA"/>
+            android:text="AAAAAAA"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -51,8 +63,10 @@
             style="@style/transparentTextView"
             android:gravity="center"
             android:layout_gravity="left"
+            android:layout_alignParentRight="true"
             android:textColor="@color/colorBrownForText"
             android:text="PLN"/>
+    </RelativeLayout>
     </LinearLayout>
 
-</LinearLayout>
+</androidx.cardview.widget.CardView>
