--- a/app/src/main/res/layout/income_recycler_row.xml
+++ b/app/src/main/res/layout/income_recycler_row.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="10dp"
     app:cardCornerRadius="5dp"
     app:cardElevation="2dp">
@@ -13,60 +13,60 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="AAAAAAAA"
-            android:id="@+id/txtRecyclerCategory"
-            android:textSize="25sp"
-            android:layout_margin="10dp"
-            android:layout_marginLeft="20dp"/>
+            android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/txtRecyclerCategory"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_marginLeft="20dp"
+                android:text="AAAAAAAA"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/txtRecyclerDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_gravity="right"
+                android:layout_margin="10dp"
+                android:layout_marginLeft="20dp"
+                android:gravity="right"
+                android:text="AAAAA"
+                android:textSize="25sp" />
+
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="AAAAA"
-            android:id="@+id/txtRecyclerDate"
-            android:layout_gravity="right"
-            android:layout_alignParentRight="true"
-            android:gravity="right"
-            android:textSize="25sp"
-            android:layout_margin="10dp"
-            android:layout_marginLeft="20dp"/>
+            android:orientation="horizontal">
 
+            <TextView
+                android:id="@+id/txtRecyclerAmount"
+                style="@style/transparentTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:gravity="center"
+                android:text="AAAAAAA"
+                android:textColor="@color/colorBrownForText" />
 
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/transparentTextView"
-            android:gravity="center"
-            android:id="@+id/txtRecyclerAmount"
-            android:layout_gravity="left"
-            android:textColor="@color/colorBrownForText"
-            android:text="AAAAAAA"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/transparentTextView"
-            android:gravity="center"
-            android:layout_gravity="left"
-            android:layout_alignParentRight="true"
-            android:textColor="@color/colorBrownForText"
-            android:text="PLN"/>
-    </RelativeLayout>
+            <TextView
+                style="@style/transparentTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_gravity="left"
+                android:gravity="center"
+                android:text="PLN"
+                android:textColor="@color/colorBrownForText" />
+        </RelativeLayout>
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
