--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorDarkBlue">#66B4CC</color>
     <color name="colorBrownForText">#5F4E34</color>
     <color name="colorDarkGreen">#164012</color>
+    <color name="colorRed">#952121</color>
 </resources>
