fix: activity add transaction bug with decimal numbers

--- a/app/src/main/res/layout/activity_add_transaction.xml
+++ b/app/src/main/res/layout/activity_add_transaction.xml
@@ -44,7 +44,7 @@
     <EditText
         style="@style/roundedEditText"
         android:id="@+id/editAmount"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         />
 
     <TextView
