--- a/app/src/main/res/layout/content_wallet.xml
+++ b/app/src/main/res/layout/content_wallet.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,14 +7,19 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".WalletActivity"
     android:background="@drawable/stoinks"
-    android:orientation="vertical"
     tools:showIn="@layout/activity_wallet">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_gravity="center">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="WALLET"
-        android:textSize="60dp"
+        android:textSize="50dp"
         android:layout_marginTop="50dp"
         style="@style/transparentTextView"
         android:layout_gravity="center"
@@ -31,5 +36,53 @@
         android:textSize="70sp"
         />
 
+    <TextView
+        style="@style/transparentTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:text="Total income"
+        android:textSize="30sp" />
+
+    <TextView
+        style="@style/whiteSemiTransparentButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:layout_gravity="center"
+        android:text="10020.99"
+        android:textColor="@color/colorDarkGreen"
+        android:id="@+id/txtTotalIncome"
+        android:textSize="40sp"
+        />
+
+    <TextView
+        style="@style/transparentTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:text="Total outcome"
+        android:textSize="30sp"
+        />
+
+    <TextView
+        style="@style/whiteSemiTransparentButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:textColor="@color/colorRed"
+        android:layout_gravity="center"
+        android:text="10020.99"
+        android:id="@+id/txtTotalExpenses"
+        android:textSize="40sp"
+        />
+
+
+
+
 
 </LinearLayout>
+
+</ScrollView>
