--- a/app/src/main/res/layout/income_recycler_row.xml
+++ b/app/src/main/res/layout/income_recycler_row.xml
@@ -24,7 +24,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:layout_marginLeft="20dp"
-                android:text="AAAAAAAA"
+                android:text="Category"
                 android:textSize="25sp" />
 
             <TextView
@@ -36,7 +36,7 @@
                 android:layout_margin="10dp"
                 android:layout_marginLeft="20dp"
                 android:gravity="right"
-                android:text="AAAAA"
+                android:text="Date"
                 android:textSize="25sp" />
 
 
@@ -54,7 +54,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
                 android:gravity="center"
-                android:text="AAAAAAA"
+                android:text="Amount"
                 android:textColor="@color/colorBrownForText" />
 
             <TextView
