Icons in expenses_recycler_row, of center for now

--- a/app/src/main/res/layout/expenses_recycler_row.xml
+++ b/app/src/main/res/layout/expenses_recycler_row.xml
@@ -11,7 +11,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:weightSum="7"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="6"
+            android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -67,6 +74,30 @@
                 android:text="PLN"
                 android:textColor="@color/colorBrownForText" />
         </RelativeLayout>
+    </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@color/colorLightGray"
+            android:orientation="vertical">
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableTop="@drawable/delete_icon"
+                android:background="@null"
+                android:textSize="30sp"/>
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableBottom="@drawable/edit_icon"
+                android:background="@color/colorLightGray"
+                android:textSize="30sp"/>
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
