--- a/app/src/main/res/layout/content_wallet.xml
+++ b/app/src/main/res/layout/content_wallet.xml
@@ -4,32 +4,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".WalletActivity"
     android:background="@drawable/stoinks"
     android:orientation="vertical"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".WalletActivity"
     tools:showIn="@layout/activity_wallet">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="WALLET"
-        android:textSize="60dp"
-        android:layout_marginTop="50dp"
-        style="@style/transparentTextView"
-        android:layout_gravity="center"
-        />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        style="@style/whiteSemiTransparentButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="30dp"
-        android:layout_gravity="center"
-        android:text="10020.99"
-        android:id="@+id/txtAccountBalance"
-        android:textSize="70sp"
-        />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
+            <TextView
+                style="@style/transparentTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="50dp"
+                android:text="WALLET"
+                android:textSize="60dp" />
 
+            <TextView
+                android:id="@+id/txtAccountBalance"
+                style="@style/whiteSemiTransparentButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="30dp"
+                android:text="10020.99"
+                android:textSize="70sp" />
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
