--- a/app/src/main/res/layout/expenses_recycler_row.xml
+++ b/app/src/main/res/layout/expenses_recycler_row.xml
@@ -82,19 +82,33 @@
             android:background="@color/colorLightGray"
             android:orientation="vertical">
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawableTop="@drawable/delete_icon"
-                android:background="@null"
-                android:textSize="30sp"/>
+<!--            <Button-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:drawableTop="@drawable/delete_icon"-->
+<!--                android:background="@null"-->
+<!--                android:textSize="30sp"/>-->
 
-            <Button
-                android:layout_width="match_parent"
+            <ImageButton
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableBottom="@drawable/edit_icon"
-                android:background="@color/colorLightGray"
-                android:textSize="30sp"/>
+                android:background="@drawable/delete_icon"
+                android:layout_margin="10dp"
+                android:id="@+id/btnExpensesRecyclerDelete"/>
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edit_icon"
+                android:layout_margin="10dp"
+                android:id="@+id/btnExpensesRecyclerEdit"/>
+
+<!--            <Button-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:drawableBottom="@drawable/edit_icon"-->
+<!--                android:background="@color/colorLightGray"-->
+<!--                android:textSize="30sp"/>-->
 
         </LinearLayout>
 
