add: basic spinner functionality to AddTransactionActivity

--- a/app/src/main/res/layout/activity_add_transaction.xml
+++ b/app/src/main/res/layout/activity_add_transaction.xml
@@ -62,9 +62,13 @@
                 style="@style/whiteTextView"
                 android:text="Category" />
 
-            <EditText
+            <!--<EditText
                 android:id="@+id/editCategory"
-                style="@style/roundedEditText" />
+                style="@style/roundedEditText" />-->
+            <Spinner
+                android:layout_width="match_parent"
+                style="@style/roundedEditText"
+                android:id="@+id/SpinnerCategory"/>
 
             <TextView
                 android:id="@+id/txt"
